--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,14 @@ nav > a:hover{
     
 }
 
+.logo {
+    width: 10%;
+    float: left;
+    margin-top: -35px;
+    margin-left: 15px;
+    
+}
+
 header .textos-header{
     display: flex;
     height: 430px;
@@ -86,7 +94,7 @@ header .textos-header{
     width: 100%;
 }
 
-/* ABOUT US*/
+/* ABOUT MYSELF*/
 
 .contenedor-sobre-nosotros{
     display: flex;
@@ -95,38 +103,31 @@ header .textos-header{
 }
 
 .imagen-about-us{
-    width: 48%;
+    width: 35%;
+    height: 35%;
+    object-fit: cover;
+    border: 3px solid white;
+    border-radius: 50%;
+    display: block;
+    margin: 0 0 10% 10% ;
 
 }
 
 
-.sobre-nosotros .contenido-textos{
-    width: 48%;
-    
-
+.contenedor-sobre-nosotros .contenido-textos{
+    width: 45%;
+    margin-right: 10%;
+    margin-left: 50px;
+    font-size: 25px;
 }
 
 .contenido-textos h3{
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 
 }
-.contenido-textos h3 span{
-    background: #4d0686;
-    color: white;
-    border-radius: 50%;
-    display: inline-block;
-    text-align: center;
-    width: 30px;
-    height: 30px;
-    padding: 2px;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
-    margin-right: 5px;
-}
-
 .contenidos-textos p{
-    padding: 0px 0px 30px 15px;
-    font-weight: 300;
-    text-align: justify;
+    padding: 5px 5px 30px 30px;
+    text-align:justify;
 }
 
 /* galeria*/
