--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,9 @@ body{
 header{
     width: 100%;
     height: 600px;
-    background: (to right, #a6ffcb75, #12d7fa75, #1fa2ff65), url(../laptop.jpg); /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #a6ffcb75, #12d7fa75, #1fa2ff65), url(../laptop.jpg);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #a6ffcb75, #12d7fa75, #1fa2ff65), url(../laptop.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: (to right, #a6ffcb75, #12d7fa75, #1fa2ff65), url(img/laptop.jpg); /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #a6ffcb75, #12d7fa75, #1fa2ff65), url(img/laptop.jpg);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #a6ffcb75, #12d7fa75, #1fa2ff65), url(img/laptop.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-attachment: fixed;
     position: relative;
@@ -446,3 +446,49 @@ footer{
     }
 }
 
+
+
+.contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 80vh;
+    padding: 0 2rem;
+    background: var(--main-gray);
+  }
+  
+  .contact-section-header > h2 {
+    font-size: 6rem;
+  }
+  
+  @media (max-width: 28.75em) {
+    .contact-section-header > h2 {
+      font-size: 4rem;
+    }
+  }
+  
+  .contact-section-header > p {
+    font-style: italic;
+  }
+  
+  .contact-links {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 980px;
+    margin-top: 4rem;
+    flex-wrap: wrap;
+  }
+  
+  .contact-details {
+    font-size: 2.4rem;
+    text-shadow: 2px 2px 1px #1f1f1f;
+    transition: transform 0.3s ease-out;
+  }
+  
+  .contact-details:hover {
+    transform: translateY(8px);
+  }
