--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
+:root {
+    --main-white: #f0f0f0;
+    --main-red: #be3144;
+    --main-blue: #45567d;
+    --main-gray: #303841;
+  }
+  
+  /* Base reset */
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* box-sizing and font sizing */
+  *,
+  *::before,
+  *::after {
+    box-sizing: inherit;
+  }
+  
 *{
     margin: 0;
     padding: 0;
@@ -188,47 +208,6 @@ header .textos-header{
     transform: scale(1);
 }
 
-/* CLIENTES*/
-
-.cards{
-    display: flex;
-    justify-content: space-evenly;
-
-}
-
-.cards .card{
-    background: #4d0686;
-    display: flex;
-    width: 46%;
-    height: 200px;
-    justify-content: space-evenly;
-    border-radius: 5px;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
-    align-items: center;
-
-
-}
-
-.cards .card img{
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border: 3px solid white;
-    border-radius: 50%;
-    display: block;
-    
-}
-
-.cards .card > .contenido-texto-card{
-    width: 60%;
-    color: white;
-
-}
-
-.cards .card > .contenido-texto-card{
-    font-weight: 300;
-    padding-top: 5px;
-}
 
 /* our team*/
 
@@ -274,32 +253,82 @@ footer{
 
 .contenedor-footer{
     display: flex;
-    width: 90%;
-    justify-content: space-evenly;
-    margin: auto;
-    padding-bottom: 50px;
-    border-bottom: 1 solid #ccc;
-}
-
-.contenedor-foo{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    width: 100%;
+    height: 150px;
+    padding: 0 2em;
 }
 
-.contenedor-foo h4{
-    color: white;
-    border-bottom: 3px solid #af20d3;
-    padding-bottom: 5px;
-    margin-bottom: 10px;
-}
+.contenedor-foo > h2 {
+    font-size: 3rem;
+  }
 
-.contenedor-foo p{
-    color: gray;
+  .contact-links {
+    display: flex;
+    column-gap: 30px;
+    padding-top: 20px;
     
-}
+  }
+  
+  .icon {
+    width: 60px;
+    height: 60px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    font-size: 26px;
+    color: #fff;
+    border-radius: 50%;
+    outline: 2px solid #fff;
+    transition-property: outline-offset, outline-color,background-color;
+    transition-duration: .25s;
+  }
+  
+  .icon:hover {
+    outline-offset: 4px;
+  }
+
+  .icon:hover i{
+    animation: shake .95s;
+  }
+
+  .icon--instagram:hover {
+    background-image: radial-gradient(circle at 30% 107%, #fdf407 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+    outline-color: #a02d76;
+  }
+
+  .icon--github:hover{
+    background-color: #2ea44f;
+    outline-color: #2ea44f;
+  }
+
+  .icon--linkedIn:hover{
+    background-color: #0e76a8;
+    outline-color: #0e76a8;
+  }
+  .icon--email:hover{
+    background-color: #db4a39;
+    outline-color: #db4a39;
+  }
+  .icon--whatsapp:hover{
+    background-color:   #00bb2d;
+    outline-color:   #00bb2d;
+  }
+
+  @keyframes shake {
+    10%{transform: rotate(15deg);}
+    20%{transform: rotate(-15deg);}
+    30%{transform: rotate(15deg);}
+    40%{transform: rotate(-15deg);}
+  }
 
 .titulo-final{
     text-align: center;
-    font-size: 24px;
+    font-size: 16px;
     margin: 20px 0 0 0;
     color: #9e9797
 }
@@ -402,93 +431,11 @@ footer{
         width: 95%;
     }
 
-    /*galeria*/
+    
+    .btn {
+        display: inline-block;
+        padding: 1rem 2rem;
+        border-radius: 2px;
+      }
 
-    .imagen-portafolio{
-        width: 95%;
-    }
-
-    /* clientes*/
-
-    .cards .card{
-        height: 350px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .cards .card img{
-        width: 90px;
-        height: 90px;
-    }
-    /*footer*/
-
-    .contenedor-footer{
-        flex-direction: column;
-    }
-
-    .contenedor-foo{
-        margin-bottom: 20px;
-        text-align: center;
-    }
-
-    .contenedor-foo h4{
-        border-bottom: 0px none;
-    }
-
-    .contenedor-foo p{
-        color: #ccc;
-        border-bottom: 1px solid #f2f2f2;
-        padding-bottom: 20px;
-    }
-
-    .titulo-final{
-        font-size: 20px;
-    }
-}
-
-
-
-.contact-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 80vh;
-    padding: 0 2rem;
-    background: var(--main-gray);
-  }
-  
-  .contact-section-header > h2 {
-    font-size: 6rem;
-  }
-  
-  @media (max-width: 28.75em) {
-    .contact-section-header > h2 {
-      font-size: 4rem;
-    }
-  }
-  
-  .contact-section-header > p {
-    font-style: italic;
-  }
-  
-  .contact-links {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    max-width: 980px;
-    margin-top: 4rem;
-    flex-wrap: wrap;
-  }
-  
-  .contact-details {
-    font-size: 2.4rem;
-    text-shadow: 2px 2px 1px #1f1f1f;
-    transition: transform 0.3s ease-out;
-  }
-  
-  .contact-details:hover {
-    transform: translateY(8px);
   }
