--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,10 @@
-:root {
-    --main-white: #f0f0f0;
-    --main-red: #be3144;
-    --main-blue: #45567d;
-    --main-gray: #303841;
-  }
-  
-  /* Base reset */
-  * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* box-sizing and font sizing */
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Rajdhani', sans-serif;
 
 }
 
@@ -38,7 +17,8 @@ body{
 }
 
 .titulo{
-    color: #642a73;
+    font-family: 'Silkscreen', cursive;
+    color: #1fa2ffe0;
     font-size: 30px;
     text-align: center;
     margin-bottom: 60px;
@@ -71,7 +51,7 @@ nav > a{
     font-weight: 300;
     text-decoration: none;
     margin-right: 10px;
-
+    font-family: 'Silkscreen', cursive;
 }
 
 nav > a:hover{
@@ -80,10 +60,10 @@ nav > a:hover{
 }
 
 .logo {
-    width: 10%;
+    width: 100px;
     float: left;
-    margin-top: -35px;
-    margin-left: 15px;
+    margin-top: -20px;
+    margin-left: 50px;
     
 }
 
@@ -123,8 +103,8 @@ header .textos-header{
 }
 
 .imagen-about-us{
-    width: 35%;
-    height: 35%;
+    width: 25%;
+    height: 25%;
     object-fit: cover;
     border: 3px solid white;
     border-radius: 50%;
@@ -143,15 +123,108 @@ header .textos-header{
 
 .contenido-textos h3{
     margin-bottom: 20px;
+    font-family: 'Rajdhani', sans-serif;
 
 }
-.contenidos-textos p{
-    padding: 5px 5px 30px 30px;
+.contenido-textos p{
+    
     text-align:justify;
+    font-family: 'Rajdhani', sans-serif;
+
 }
 
 /* galeria*/
-
+ 
+.projects-section {
+    text-align: center;
+    padding: 20px;
+    background: #f2f2f2;
+  }
+  
+  .projects-section-header {
+    max-width: 500px;
+    margin: 30px auto;
+  }
+  
+  @media (max-width: 28.75em) {
+    .projects-section-header {
+      font-size: 4rem;
+    }
+  }
+  
+  /* "Automagic" image grid using no media queries */
+  .projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 4rem;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    margin-bottom: 6rem;
+  }
+  
+  @media (max-width: 30.625em) {
+    .projects-section {
+      padding: 6rem 1rem;
+    }
+  
+    .projects-grid {
+      grid-template-columns: 1fr;
+    }
+  }
+  
+  
+  
+  .code {
+    color: #f2f2f2;
+    transition: color 0.3s ease-out;
+    font-size: 30px;
+    }
+  
+  .project:hover .code {
+    color: #1fa2ffe0;
+  }
+  
+  .project-image {
+    height: calc(100% - 70px);
+    width: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    text-decoration: none;
+  }
+  
+  .project-title {
+    color: black;
+    font-size: 20px;
+    padding: 8px 2px;
+    text-decoration-line: none;
+  }
+  
+  .btn {
+    display: inline-block;
+    padding: 1rem 2rem;
+    border-radius: 2px;
+  }
+  
+  .btn-show-all {
+    font-size: 2rem;
+    background: var(--main-gray);
+    transition: background 0.3s ease-out;
+  }
+  
+  .btn-show-all:hover {
+    background: var(--main-red);
+  }
+  
+  .btn-show-all:hover > i {
+    transform: translateX(2px);
+  }
+  
+  .btn-show-all > i {
+    margin-left: 10px;
+    transform: translateX(0);
+    transition: transform 0.3s ease-out;
+  }
 .portafolio{
     background: #f2f2f2;
 
@@ -212,7 +285,7 @@ header .textos-header{
 /* our team*/
 
 .about-services{
-    background: #f2f2f2;
+    background: #acacac;
     padding-bottom: 30px;
 }
 
@@ -264,13 +337,14 @@ footer{
 
 .contenedor-foo > h2 {
     font-size: 3rem;
+    font-family: 'Silkscreen', cursive;
+    color: #1fa2ffe0;
   }
 
   .contact-links {
     display: flex;
     column-gap: 30px;
     padding-top: 20px;
-    
   }
   
   .icon {
